<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/copy_newFolder_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:drawablePadding="3dp"
        android:drawableTop="@mipmap/edit"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/new_folder"
        android:textSize="@dimen/smallTextSize" />

    <TextView
        android:id="@+id/cancel_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:drawablePadding="3dp"
        android:drawableTop="@mipmap/edit"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cancel_string"
        android:textSize="@dimen/smallTextSize" />

    <TextView
        android:id="@+id/parse_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:drawablePadding="3dp"
        android:drawableTop="@mipmap/edit"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/parse_string"
        android:textSize="@dimen/smallTextSize" />
</LinearLayout>